<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/menu_home_title_text"/>
    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/btn_favorite"
        app:showAsAction="withText" />
    <item
        android:id="@+id/collections"
        android:icon="@drawable/ic_baseline_collections"
        android:title="@string/btn_collections"
        app:showAsAction="withText" />
    <item
        android:id="@+id/watch_later"
        android:icon="@drawable/ic_baseline_watch_later"
        android:title="@string/btn_watch_later"
        app:showAsAction="withText" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_round_settings_24"
        android:title="@string/btn_settings"
        app:showAsAction="withText">
    </item>
</menu>