...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin16dp"
        app:borderWidth="0dp"
        android:translationX="@dimen/translation_x_72dp"
        android:backgroundTint="@color/design_default_color_primary_dark"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="left|bottom"
        app:srcCompat="@drawable/ic_baseline_cloud_download_24"
        app:tint="@android:color/white"/>

    <ProgressBar
        android:id="@+id/progress_bar"
...
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|right"
        app:srcCompat="@drawable/ic_baseline_share_24"
        app:tint="@android:color/white"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/details_fab_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin16dp"
        app:borderWidth="0dp"
        android:backgroundTint="@color/design_default_color_primary_dark"
        app:layout_anchor="@id/app_bar"
...
